--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML Project</title>
+        <title>Vincent - Portfolio</title>
     </head>
 
     <body>
         <!--Header(start)-->
-        <table id="header" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#4CAF50">
+        <table id="header" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#F2B8C6">
             <tr>
                 <td>
                     <table border="0" cellpadding="15" cellspacing="0" width="90%" align="center">
@@ -14,8 +14,8 @@
                             <td></td>
 
                             <td>
-                                <font face="Comic sans MS" size="6">
-                                    <b>Your Name</b>
+                                <font face="cursive" size="6">
+                                    <b>Vincent Prout</b>
                                 </font>
                             </td>
 
@@ -23,44 +23,8 @@
 
                             <td>
                                 <a href="#home" style="text-decoration: none;">
-                                    <font face="Verdana" size="5" color="black">
+                                    <font face="Verdana" size="5" color="white">
                                         Home
-                                    </font>
-                                </a>
-                            </td>
-
-                            <td>
-                                |
-                            </td>
-
-                            <td>
-                                <a href="#about" style="text-decoration: none;">
-                                    <font face="Verdana" size="5" color="black">
-                                        About
-                                    </font>
-                                </a>
-                            </td>
-
-                            <td>
-                                |
-                            </td>
-
-                            <td>
-                                <a href="#achievements" style="text-decoration: none;">
-                                    <font face="Verdana" size="5" color="black">
-                                        Achievements
-                                    </font>
-                                </a>
-                            </td>
-
-                            <td>
-                                |
-                            </td>
-
-                            <td>
-                                <a href="#contact" style="text-decoration: none;">
-                                    <font face="Verdana" size="5" color="black">
-                                        Contact
                                     </font>
                                 </a>
                             </td>
@@ -79,12 +43,11 @@
                         <tr>
                             <td align="center" valign="middle">
                                 <h3>
-                                    <font face="Times New Roman" size="6" color="#ffffff">
-                                        Hi Geeks!
+                                    <font face="Times New Roman" size="6" color="#FEC5E5">
+                                        hii:3!
                                     </font>
-                                </h3>
-
-                                <h2>
+                                </h3> Vincent, a dedicated coder with a passion for creating elegant solutions through lines of code, embodies a unique blend of creativity and analytical prowess. His days are often spent immersed in the intricate dance of algorithms and syntax, crafting software that merges functionality with seamless user experience. With a keen eye for detail and a penchant for problem-solving, Vincent thrives in the ever-evolving landscape of technology, where each project presents a new challenge to conquer.
+                             <h2>
                                     <font face="Verdana" size="6" color="#4CAF50">
                                         <!-- Freelance Programmer -->
                                     </font>
@@ -104,115 +67,44 @@
                     <table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
                         <tr>
                             <td height="180" align="center" valign="middle" colspan="2">
-                                <font face="Verdana" size="7" color="#4CAF50">
+                                <font face="sabon" size="5" color="#ffc0da">
                                     About Me
                                 </font>
-                                <hr color="#4CAF50" width="90" />
+                                <hr color="#ffc0da" width="90" />
                             </td>
                         </tr>
 
                         <tr>
                             <td width="40%">
-                                <img src="img.png" />
+                                <img src="./image/tater-tots-gatito-enyesado-700x438.jpeg" width="350" height="219">
+                                <img src="./image/CRUNCHCRUNCHCRUNCH.webp" width="310" height="260.5">
                             </td>
 
                             <td width="60%">
-                                <font face="Verdana" size="4" color="white">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                <font face="minion" size="4" color="pink">
+                                    Vincent, a dedicated coder with a passion for creating elegant solutions through lines of code, embodies a unique blend of creativity and analytical prowess. His days are often spent immersed in the intricate dance of algorithms and syntax, crafting software that merges functionality with seamless user experience. With a keen eye for detail and a penchant for problem-solving, Vincent thrives in the ever-evolving landscape of technology, where each project presents a new challenge to conquer.
+                                    Beyond the realm of coding, Vincent finds solace in the pages of literature, where stories unfold like lines of code in a narrative structure. Whether delving into the realms of science fiction, exploring the depths of historical non-fiction, or unraveling the mysteries of a thriller, he finds inspiration and relaxation in the written word. His eclectic taste in literature mirrors his approach to coding—embracing diversity and complexity in narratives as well as in algorithms.
+                                    An equally important aspect of Vincent's life is his love for cats. Their independent yet affectionate nature resonates with him, providing moments of companionship and tranquility amidst the intensity of coding marathons. Whether it's a playful paw on the keyboard or a purring presence by his side, his feline friends add a touch of warmth to his workspace, reminding him to pause and appreciate the smaller joys in life.
+                                    To fuel his endeavors, Vincent indulges in his favorite beverage: Dr Pepper. Its unique blend of flavors serves as a refreshing companion during long coding sessions, offering both a caffeine kick and a moment of enjoyment. As he refines lines of code or navigates through complex algorithms, a sip of Dr Pepper provides a brief respite, re-energizing him to tackle the next coding challenge with renewed vigor.
+                                    In essence, Vincent's life is a harmonious symphony of coding brilliance, literary exploration, feline companionship, and the occasional fizz of Dr Pepper—a testament to his multifaceted personality and unwavering dedication to his passions.
+                                    
                                     <hr color="black" />
                                     Cheers,
                                     <br />
-                                    <b>Your Name.</b>
+                                    <b>Vincent.</b>
                                 </font>
                             </td>
                         </tr>
                     </table>
-                    <hr color="black" />
-                    <hr color="black" />
+                    <hr color="pink" />
+                    <hr color="hotpink" />
                     <hr color="black" />
                 </td>
             </tr>
         </table>
         <!--About(end)-->
-
-        <!--Achievement(start)-->
-        <table id="achievements" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="black">
-            <tr>
-                <td>
-                    <table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
-                        <tr>
-                            <td height="180" align="center" valign="middle">
-                                <font face="Verdana" size="7" color="#4CAF50">
-                                    Achievements
-                                    <hr color="#4CAF50" width="100" />
-                                </font>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                <font face="Verdana" size="4" color="white">
-                                    <ul>
-                                        <li>
-                                            <b>Intern at GeeksforGeeks.</b>
-                                            <ul>
-                                                <li>
-                                                    December,2020 - Present.
-                                                </li>
-                                                <li>
-                                                    Write technical articles on programming related topics.
-                                                </li>
-                                            </ul>
-                                        </li>
-
-                                        <li>
-                                            <hr color="black" />
-                                            <hr color="black" />
-                                            <hr color="black" />
-                                            <b>Microsoft Learn Student Ambassador.</b>
-                                            <ul>
-                                                <li>
-                                                    August,2020 - Present.
-                                                </li>
-                                                <li>
-                                                    Conducted events and workshops on different technologies.
-                                                </li>
-                                            </ul>
-                                        </li>
-
-                                        <li>
-                                            <hr color="black" />
-                                            <hr color="black" />
-                                            <hr color="black" />
-                                            <b>Mentored HackTX.</b>
-                                            <ul>
-                                                <li>
-                                                    October,2020.
-                                                </li>
-                                                <li>
-                                                    Selected from Microsoft as Student ambassador where I mentored students in their projects.
-                                                </li>
-                                                <hr color="black" />
-                                                <hr color="black" />
-                                                <hr color="black" />
-                                                <hr color="black" />
-                                                <hr color="black" />
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </font>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-        <!--Achievement(end)-->
-
-        <!--Contact(start)-->
-        <table id="contact" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#c2c0c3">
+         <!--Contact(start)-->
+        <table id="contact" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFB6C1">
             <tr>
                 <td>
                     <table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
@@ -308,16 +200,16 @@
                     <table border="0" cellpadding="15" cellspacing="0" width="90%" align="center">
                         <tr>
                             <td width="80%" valign="top">
-                                <font face="Verdana" color="#4CAF50" size="5">
-                                    ©Copyright 2050 by nobody. All rights reserved.
+                                <font face="tajawal"color="#f3b2db" size="5">
+                                    ©Copyright silly billy co. 2024! :3
                                 </font>
                             </td>
 
                             <td width="10%">
-                                <font face="arial" color="black" size="5">
+                                <font face="arial" color="gray" size="5">
                                     <a href="#header" style="text-decoration: none;">
-                                        <font face="Verdana" color="#4CAF50" size="6">
-                                            <b>TOP ☝</b>
+                                        <font face="kalam" color="#f3b2db" size="6">
+                                            <b>CLICK HERE FOR TOP</b>
                                         </font>
                                     </a>
                                 </font>
